# verses

./: 200.html  LICENSE  README.md  _payload.json  app.vue  index.html  nuxt.config.ts  package.json  pyproject.toml  tailwind.config.ts
_nuxt/: LessonLast.a4bfe931.js  LessonNext.9a7f51a8.js  Lord.6537d108.js  Lord.a3fb795d.css  Passage.0bdffac8.js  Passage.4c2378f7.css  VerseGrid.863d8e98.css  VerseGrid.98c5598a.js  birth-of-moses.38bc0d33.js  call-of-abram.dbe133db.js  call-of-gideon.67871451.js  christ-is-wisdom.6f4a2f94.js  david-anointed-king.56f97c31.js  entry.3dd021df.js  error-404.b6626813.js  error-500.3866a361.js  fetch.cc62e8d4.js  god-chooses-younger-twin.a73a8477.js  god-gives-tools.cd886672.js  god-picked-you.574d989b.js  index.89ea1c5b.js  jacob-called-israel.4ac5f691.js  scepter-given-to-judah.b3fdb2cf.js  song-of-moses.f480dbb5.js  we-are-gods-handiwork.409447b3.js  who-is-king.14b49efb.js
app/: app.vue  types.ts
components/: LessonHeader.vue  LessonItem.vue  LessonLast.vue  LessonNext.vue  LessonUnit.vue  Lord.vue  Passage.vue  Verse.vue  VerseGrid.vue  VerseRow.vue  navigation.vue  scripture.vue  verse.vue
content/: 1.call-of-abram.md  2.god-chooses-younger-twin.md  3.jacob-called-israel.md  4.scepter-given-to-judah.md  call-of-abram.md  god-chooses-younger-twin.md  jacob-called-israel.md  scepter-given-to-judah.md
data/: genesis.csv  genesis.json  ruth.csv  ruth.json
pages/: [...slug].vue  call-of-abram.vue  god-chooses-younger-twin.vue  home.vue  index.vue  jacob-called-israel.vue  lessons.vue  scepter-given-to-judah.vue
(+119 files in other folders)
