[tool.poetry]
name = "verses"
version = "0.1.0"
description = ""
authors = ["Nick Whitt <nick.whitt@protonmail.com>"]
license = "(MIT OR CC-BY-4.0)"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
devtools = {extras = ["pygments"], version = "^0.8.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
